# kJSON

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kjson.pc.in
doc/: DEVELOPMENT_PLAN.md  GEMINI.md
include/: kjson.h
src/: cli.c  kjson.c  kjson.rl
test/: CMakeLists.txt  fuzz_harness.c  test_basic.c  test_comprehensive.c  test_json5.c  test_max_depth.c  test_optimizations.c  test_standard.c  test_utils.c  test_utils.h
test/corpus/: 3.json
